<?xml version="1.0" encoding="utf-8"?>
<!--Using linear layout since I wanted to arrange all the views in a vertical fashion-->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <variable
        name="login"
        type="com.udacity.shoestore.login.LoginFragment.Login" />
  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:context=".login.LoginFragment">

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/enter_email"
        android:text="@={login.email}"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/enter_password"
        android:ems="10"
        android:text="@={login.password}"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/signUp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/sign_up" />
    <Button
        android:id="@+id/signIn"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/sign_in" />

  </LinearLayout>
</layout>