<?xml version="1.0" encoding="utf-8"?>
<!--Using linear layout since I wanted to arrange all the views in a vertical fashion and then arrange the buttons horizontally-->
<layout>

  <data>
    <variable
        name="shoe"
        type="com.udacity.shoestore.models.Shoe" />
  </data>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:context=".detail.DetailsFragment">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/name" />
    <EditText
        android:id="@+id/editName"
        android:text="@={shoe.name}"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/company" />
    <EditText
        android:text="@={shoe.company}"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editCompany"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/size" />
    <EditText
        android:inputType="numberDecimal"
        android:text="@={`` + shoe.size}"
        android:id="@+id/editSize"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/description" />
    <EditText
        android:text="@={shoe.description}"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editDescription"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
      <Button
          android:id="@+id/save"
          android:layout_margin="32dp"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_weight="1"
          android:text="@string/save" />
      <Button
          android:id="@+id/cancel"
          android:layout_margin="32dp"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_weight="1"
          android:text="@string/cancel" />
    </LinearLayout>

  </LinearLayout>
</layout>