<?xml version="1.0" encoding="utf-8"?>
<!--Using linear layout since I wanted to arrange all the views in a vertical fashion-->
<layout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:context=".instructions.InstructionsFragment">

    <TextView
        android:id="@+id/instructionsText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/black"
        android:ems="10"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/instructions1"/>
    <TextView
        android:id="@+id/instructionsText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/black"
        android:ems="10"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/instructions2"/>
    <Button
        android:id="@+id/shoeList"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/shoe_list" />

  </LinearLayout>
</layout>